chore: Fixed Sonar findings.