@@ -12,7 +12,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
 /**
@@ -58,7 +59,7 @@ class StartTransactionActionTest {
 
         verify(connectorMock, times(1)).startTransaction(any(JobExecution.class), argCap.capture());
 
-        assertEquals(argCap.getValue(), result.get(0).get("tx-id"));
+        assertEquals(argCap.getValue(), result.getFirst().get("tx-id"));
     }
 
 }
